--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,12 +1,40 @@
 body {
   @include fluid-text(18, 16);
 
+  position: relative;;
   display: flex;
   flex-direction: column;
   font-family: var(--font-family-base);
   color: var(--color-dark);
   background-color: var(--color-blue-gray);
   font-weight: 400;
+
+  &.is-shadow {
+    &::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.35);
+      z-index: var(--z-index-shadow-body);
+      pointer-events: none;
+
+
+      @supports not (backdrop-filter: blur(2.5px)) {
+        background: rgba(0, 0, 0, 0.5);
+      }
+    }
+
+
+    @supports (backdrop-filter: blur(2.5px)) {
+      &::before {
+        backdrop-filter: blur(2.5px);
+        background: rgba(0, 0, 0, 0.35);
+      }
+    }
+  }
 }
 
 main {
