--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -5,6 +5,13 @@
   padding-inline: var(--container-padding-x);
 }
 
+.container-extra {
+  width: 100%;
+  max-width: calc(var(--container-extra-width) + var(--container-padding-x) * 2);
+  margin-inline: auto;
+  padding-inline: var(--container-padding-x);
+}
+
 .visually-hidden {
   @include visually-hidden;
 }
