--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -22,6 +22,7 @@
   }
 
   &--accent {
+    border-radius: var(--border-radius-l);
     background-color: var(--color-blue-gray-second);
   }
 
@@ -32,10 +33,6 @@
     color: var(--color-blue);
     border-radius: var(--border-radius-l);
     padding-inline: 38px 20px;
-
-    span {
-      //margin-left: 18px;
-    }
 
     &::before {
       @include square(10px);
@@ -54,5 +51,11 @@
         box-shadow: inset 0 0 0 1px var(--color-blue);
       }
     }
+  }
+
+  &--blue {
+    color: var(--color-light);
+    border-radius: var(--border-radius-l);
+    background-color: var(--color-blue);
   }
 }
