--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -11,10 +11,14 @@
       right: 0;
       top: 0;
       height: 100%;
+      overflow-y: auto;
+      border-radius: 0 0 0 var(--border-radius-xl);
       z-index: var(--z-index-burger-menu);
 
       @include mobile-s {
-        width: 100%;
+        min-width: 100vw;
+        border-radius: 0;
+        overflow-x: hidden;
       }
 
       .header__content {
@@ -22,7 +26,6 @@
         flex-direction: column;
         align-items: start;
         border-radius: 30px 0 0 30px;
-
       }
 
       .header__list {
@@ -37,6 +40,27 @@
           margin-bottom: -10px;
           width: 100%;
         }
+      }
+
+      .header__button-extra {
+        width: 100%;
+      }
+
+      ul.header__sublist {
+        padding: 0;
+      }
+
+      .header__button-sublist {
+        padding: 15px 0 0 0;
+        border-radius: 0;
+        top: 0;
+        position: relative;
+        left: 20px;
+      }
+
+      .header__logo-wrapper {
+        position: relative;
+        width: 100%;
       }
 
       .header__buttons {
@@ -55,8 +79,11 @@
         display: flex;
       }
 
-      .burger-button {
-        top: 8%;
+      .header__burger-button {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        translate: 0 -50%;
       }
     }
   }
@@ -147,7 +174,18 @@
         }
 
         .header__sublist {
+          max-height: fit-content;
           display: flex;
+          left: 0;
+          opacity: 1;
+
+          @include tablet-above {
+            padding: 0 20px 20px 20px;
+          }
+
+          @include tablet {
+            padding: 0;
+          }
         }
       }
     }
@@ -179,16 +217,32 @@
   }
 
   &__sublist {
-    display: none;
     flex-direction: column;
     row-gap: 25px;
     font-family: var(--font-famity-second);
     font-size: 18px;
+
+    @include tablet-above {
+      position: absolute;
+      left: 100%;
+      width: 100%;
+      max-height: 0;
+      overflow: hidden;
+      opacity: 0;
+      transition: var(--transition-duration);
+      box-sizing: border-box;
+      top: 50px;
+    }
+
+    @include tablet {
+      display: none;
+    }
   }
 
   &__buttons {
     position: relative;
     display: flex;
+    align-items: center;
     column-gap: fluid-to-laptop(10, 4);
 
     @include tablet {
@@ -209,6 +263,13 @@
     background-color: transparent;
     border: none;
     padding: 0;
+    transition-duration: var(--transition-duration);
+
+    &.is-active {
+      .header__button-icon {
+        rotate: 180deg;
+      }
+    }
 
     @include hover {
       color: var(--color-hover);
@@ -218,36 +279,78 @@
   &__buttons-sublist {
     position: relative;
     display: flex;
+    flex-direction: column;
+    transition-duration: var(--transition-duration);
+
+    &.is-active {
+      .header__button-icon {
+        rotate: 180deg;
+      }
+
+      .header__button {
+        color: var(--color-blue);
+      }
+
+      .header__button-sublist {
+        max-height: fit-content;
+        display: flex;
+        left: 0;
+        opacity: 1;
+        margin-inline: -20px;
+        width: max-content;
+
+        @include tablet-above {
+          opacity: 1;
+          top: 50px;
+        }
+
+        @include tablet {
+          left: 0;
+          padding: 0 20px 20px 20px;
+        }
+
+        @include mobile-above {
+        }
+      }
+    }
 
     @include tablet-above {
       width: 63px;
     }
   }
 
+  &__sublist,
+  &__button-sublist {
+    background-color: var(--color-light);
+    border-radius: 0 0 var(--border-radius-xl) var(--border-radius-xl);
+  }
+
   &__button-sublist {
     position: absolute;
-    top: 100%;
-    left: 0;
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    left: 100%;
     width: 100%;
     max-height: 0;
     overflow: hidden;
     opacity: 0;
     transition: var(--transition-duration);
     box-sizing: border-box;
+    top: 50px;
 
-    &.is-active {
-      max-height: fit-content;
-      opacity: 1;
-      padding: 15px;
+    @include mobile-above {
+      padding: 0 20px 20px 20px;
     }
   }
 
   &__list-icon,
   &__button-icon {
+    transition-duration: var(--transition-duration);
     @include square(24px)
   }
 
-  .burger-button {
+  &__burger-button {
     position: absolute;
     top: 50%;
     right: 0;
