--- a/src/styles/helpers/media.scss
+++ b/src/styles/helpers/media.scss
@@ -1,4 +1,5 @@
 $laptop: 1440px;
+$laptop-s: 1128px;
 $tablet: 959px;
 $mobile: 767px;
 $mobile-s: 480px;
@@ -8,6 +9,20 @@ $mobile-s: 480px;
     @content;
   }
 }
+
+
+@mixin laptop-s-above {
+  @media (width > $laptop-s) {
+    @content;
+  }
+}
+
+@mixin laptop-s {
+  @media (width <= $laptop-s) {
+    @content;
+  }
+}
+
 
 @mixin laptop {
   @media (width <= $laptop) {
