--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -66,6 +66,7 @@
   --z-index-banner-blue-button: 20;
 
   --z-index-phone-border: 666;
+  --z-index-pagination-buttons: 777;
   --z-index-shadow-body: 999;
   --z-index-burger-menu: 1000;
 }
