--- a/src/components/Implementation/Implementation.scss
+++ b/src/components/Implementation/Implementation.scss
@@ -42,8 +42,7 @@
     position: relative;
     background-color: var(--color-blue-gray-second);
     border-radius: var(--border-radius-xl);
-    column-gap: fluid-to-laptop(46, 30);
-    row-gap: 10px;
+    gap: 10px fluid-to-laptop(46, 30);
     padding: fluid(50, 20);
 
     @include mobile-above {
