added select, section contact.

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -65,6 +65,8 @@
   --z-index-banner-accent-button: 10;
   --z-index-banner-blue-button: 20;
 
+  --z-index-select-mate: 1;
+  --z-index-select-init: 555;
   --z-index-phone-border: 666;
   --z-index-pagination-buttons: 777;
   --z-index-shadow-body: 999;
