--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -200,6 +200,7 @@
           display: flex;
           left: 0;
           opacity: 1;
+          z-index: var(--z-index-header-sublist);
 
           @include tablet-above {
             padding: 0 20px 20px;
@@ -253,7 +254,7 @@
       opacity: 0;
       transition: var(--transition-duration);
       box-sizing: border-box;
-      top: 50px;
+      top: 36px;
     }
 
     @include tablet {
