--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@
   --color-light-2: #E9EEF5; // main-bg-page
   --color-black: #111;
   --color-blue-gray: #D8E2EC; // bg-section
-  --color-blue-gray-second: #DEE5EF; // border-color
+  --color-blue-gray-second: #bdcae0; // border-color
   --color-gray: #F1F1F1;
   --color-gray-2: #798695;
   --color-blue: #1A4FE8;
@@ -66,6 +66,7 @@
   --z-index-banner-blue-button: 20;
 
   --z-index-select-mate: 1;
+  --z-index-header-sublist: 222;
   --z-index-select-init: 555;
   --z-index-phone-border: 666;
   --z-index-pagination-buttons: 777;
