--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -66,6 +66,7 @@
   --z-index-banner-blue-button: 20;
 
   --z-index-select-mate: 1;
+  --z-index-implementation-btn: 100;
   --z-index-header-sublist: 222;
   --z-index-select-init: 555;
   --z-index-phone-border: 666;
