--- a/src/components/Implementation/Implementation.scss
+++ b/src/components/Implementation/Implementation.scss
@@ -44,22 +44,24 @@
     border-radius: var(--border-radius-xl);
     gap: fluid-to-laptop(46, 30);
     padding: fluid(50, 20);
+    height: fluid-to-laptop(455, 430);
 
-    @include mobile-above {
-      height: 360px;
-    }
 
-    @include tablet-above {
-      height: 433px;
-    }
+    //@include laptop-above {
+    //  height: 505px;
+    //}
+    //@include mobile-above {
+    //  height: 360px;
+    //}
+    //
+    //@include tablet-above {
+    //  height: 433px;
+    //}
 
-    @include laptop-above {
-      height: 505px;
-    }
 
     @include mobile {
       flex-direction: column;
-      height: 760px;
+      height: 875px;
       justify-content: flex-start;
     }
   }
