added theme swicher, footer-bg, fix some touble

--- a/src/components/ImplementationPhone/collectionSliders/phone.scss
+++ b/src/components/ImplementationPhone/collectionSliders/phone.scss
@@ -546,7 +546,7 @@
     padding: 14px 9px 10px;
     border-radius: var(--border-radius-s) var(--border-radius-s) 0 0;
     box-shadow: 0 0 1.951px 0 rgb(0 0 0 / 15%);
-    background-color: var(--color-light);
+    background-color: var(--color-telegtam-1);
 
 
     &::before {
