--- a/src/components/ImplementationCard/ImplementationCard.scss
+++ b/src/components/ImplementationCard/ImplementationCard.scss
@@ -38,7 +38,7 @@
     }
 
     @include mobile {
-      width: 360px;
+      max-height: 360px;
       overflow-y: auto;
     }
 
@@ -51,15 +51,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 15px;
 
-
-    @include mobile-above {
-      margin-top: auto;
-    }
-
-    @include mobile {
-      margin-top: 15px;
-    }
+    // @include mobile-above {
+    //  margin-top: auto;
+    // }
   }
 
   &__pagination-wrapper {
@@ -73,7 +69,7 @@
 
     @include mobile {
       position: absolute;
-      bottom: -150px;
+      bottom: -60px;
       z-index: var(--z-index-pagination-buttons);
       left: 50%;
       translate: -50% 0;
