--- a/src/components/ImplementationPhone/ImplementationPhone.scss
+++ b/src/components/ImplementationPhone/ImplementationPhone.scss
@@ -7,6 +7,11 @@
 
   @include mobile {
     position: absolute;
-    bottom: -130px;
+    bottom: -40px;
+  }
+
+  @include mobile-s {
+    height: 466ppx;
+    bottom: -40px;
   }
 }
