--- a/src/components/ScrollProgress/ScrollProgress.scss
+++ b/src/components/ScrollProgress/ScrollProgress.scss
@@ -10,19 +10,22 @@
   box-shadow: 0 0 10px rgb(0 0 0 / 20%);
   cursor: pointer;
   z-index: var(--z-index-scroll-progress);
+  transition-duration: var(--transition-duration);
 
   @include hover {
-    box-shadow: 0 0 18px 6px rgb(90 46 46 / 100%);
+    span {
+      color: var(--color-blue);
+    }
   }
 }
 
 #progress-value {
   height: calc(100% - 15px);
   width: calc(100% - 15px);
-  background-color: var(--color-gray-1);
+  background-color: var(--color-gray);
   border-radius: 50%;
   display: grid;
   place-items: center;
   font-size: 35px;
-  color: var(--color-gold);
+  color: var(--color-blue);
 }
