--- a/src/sections/CMR/CMR.scss
+++ b/src/sections/CMR/CMR.scss
@@ -37,7 +37,7 @@
 
     &:not(:first-child) {
       padding: 32px 10px;
-      background-color: var(--color-light);
+      background-color: var(--color-gray-3);
       border-radius: var(--border-radius-xl);
 
       @include mobile {
@@ -49,6 +49,7 @@
     &:first-child {
       text-align: center;
       padding: 8px 10px;
+
       @include fluid-text(20, 16);
 
       @include tablet {
