--- a/src/sections/Our/Our.scss
+++ b/src/sections/Our/Our.scss
@@ -20,6 +20,7 @@
   &__title {
     @include fluid-text(40, 30);
 
+    text-align: center;
     font-family: var(--font-famity-second);
     font-weight: 600;
   }
@@ -27,6 +28,7 @@
   &__link {
     @include fluid-text(23, 18);
 
+    text-align: center;
     font-family: var(--font-famity-second);
     font-weight: 600;
     color: var(--color-blue);
